cabal-version:      2.4
name:               hello-conduit
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Carlos Saltos
maintainer:         csaltos@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hello-conduit
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                      , aeson
                      , http-conduit
                      , bytestring
                      , text
    extensions:       OverloadedStrings
    hs-source-dirs:   app
    default-language: Haskell2010
